--- a/index.html
+++ b/index.html
@@ -144,20 +144,18 @@
 
       <h1>更多图片</h1>
       <div class="more-img">
-        <div id="gallery">
-          <a href="./assets/images/1.png"><img src="./assets/images/1.png" /></a>
-          <a href="./assets/images/2.png"><img src="./assets/images/2.png" /></a>
-          <a href="./assets/images/3.png"><img src="./assets/images/3.png" /></a>
-          <a href="./assets/images/4.png"><img src="./assets/images/4.png" /></a>
-          <a href="./assets/images/5.png"><img src="./assets/images/5.png" /></a>
-          <a href="./assets/images/6.png"><img src="./assets/images/6.png" /></a>
-          <a href="./assets/images/7.png"><img src="./assets/images/7.png" /></a>
-          <a href="./assets/images/8.png"><img src="./assets/images/8.png" /></a>
-          <a href="./assets/images/9.png"><img src="./assets/images/9.png" /></a>
-          <a href="./assets/images/10.png"><img src="./assets/images/10.png" /></a>
-          <a href="./assets/images/11.png"><img src="./assets/images/11.png" /></a>
-          <a href="./assets/images/12.png"><img src="./assets/images/12.png" /></a>
-        </div>
+        <a href="./assets/images/1.png" data-fancybox="group"><img src="./assets/images/1.png" /></a>
+        <a href="./assets/images/2.png" data-fancybox="group"><img src="./assets/images/2.png" /></a>
+        <a href="./assets/images/3.png" data-fancybox="group"><img src="./assets/images/3.png" /></a>
+        <a href="./assets/images/4.png" data-fancybox="group"><img src="./assets/images/4.png" /></a>
+        <a href="./assets/images/5.png" data-fancybox="group"><img src="./assets/images/5.png" /></a>
+        <a href="./assets/images/6.png" data-fancybox="group"><img src="./assets/images/6.png" /></a>
+        <a href="./assets/images/7.png" data-fancybox="group"><img src="./assets/images/7.png" /></a>
+        <a href="./assets/images/8.png" data-fancybox="group"><img src="./assets/images/8.png" /></a>
+        <a href="./assets/images/9.png" data-fancybox="group"><img src="./assets/images/9.png" /></a>
+        <a href="./assets/images/10.png" data-fancybox="group"><img src="./assets/images/10.png" /></a>
+        <a href="./assets/images/11.png" data-fancybox="group"><img src="./assets/images/11.png" /></a>
+        <a href="./assets/images/12.png" data-fancybox="group"><img src="./assets/images/12.png" /></a>
       </div>
       <!--<iframe src="./imglist.html" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>-->
       <!--<section id="more">
@@ -239,6 +237,27 @@
       <span class="copy">Copyright &copy; 2022 kjch况佳城 All rights reserved.</span>
     </footer>
   </main>
+
+  <!-- Fancybox预览样式 -->
+  <script>
+    const options = {
+      Toolbar: {
+        display: {
+          left: ["infobar"],
+          middle: [
+            "zoomIn",
+            "zoomOut",
+            "toggle1to1",
+            "rotateCCW",
+            "rotateCW",
+            "flipX",
+            "flipY",
+          ],
+          right: ["slideshow", "thumbs", "close"],
+        },
+      },
+    };
+  </script>
 
   <!-- 添加首页消息弹窗 -->
   <!-- 添加并隐藏Element组件按钮 -->
