--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>（肝劲十足）</p>
         <p></p>
         <div class="buttons">
-          <a role="button" class="btn btn-primary" href="https://file.kjchmc.cn/Minecraft/school/忠德资料/" data-fancybox data-type="iframe">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
+          <a role="button" class="btn btn-primary" data-src="https://file.kjchmc.cn/Minecraft/school/忠德资料/" data-fancybox data-type="iframe">下载地图&材质包</a><a role="button" class="btn btn-secondary" href="http://mc.kjchmc.cn:8123/">查看服务器卫星地图</a>
         </div>
         <div class="buttons" style="margin-top: 10px;">
           <a role="button" class="btn1 btn1-primary" href="./About/index.html" style="background-color: #49b1f5; box-shadow: 0 -4px rgb(0 0 0 / 30%) inset, 0 4px rgb(255 255 255 / 50%) inset, -4px 0 rgb(255 255 255 / 50%) inset, 4px 0 rgb(0 0 0 / 30%) inset;">关于本项目</a>
