--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
   <!-- Fancybox预览样式 -->
   <script>
-    const options = {
+    Fancybox.bind('[data-fancybox="gallery"]', {
       Toolbar: {
         display: {
           left: ["infobar"],
@@ -300,7 +300,7 @@
           right: ["slideshow", "download", "thumbs", "close"],
         },
       }
-    };
+    });
   </script>
 
   <!-- 添加首页消息弹窗 -->
